fixed the z-index for the pop-ups

--- a/Task2/cards/cards.css
+++ b/Task2/cards/cards.css
@@ -294,7 +294,7 @@ body {
 	right: 5px;
 	display: flex;
 	justify-content: space-between;
-	z-index: 10;
+	z-index: 6;
 	color: white;
 	font-family: "Poppins", sans-serif;
 	background-color: rgb(0, 0, 0, 0.1);
@@ -305,11 +305,11 @@ body {
 .popup {
 	display: none;
 	position: fixed;
-	z-index: 3;
+	z-index: 10;
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	overflow: auto;
 	background-color: rgba(0, 0, 0, 0.4);
 	opacity: 0;
